# ecseclusterpy

./: .gitignore  .project  BackupCluster.py.txt  Cluster.py  Custom vs Scipy Runtimes.xlsx  Linkage Documentation.md  README.md  generatedata.py  loader.py  main.py  matrix_logger.py  nnchain.py  p41  p42  plot1  plot1_withoutticks  plot2  plot2_1  plot3  pyproject.toml  reader.py  ward.py
Figures/p2 dataset/: big.txt  medium.txt  small.txt
_dev/: analyze_cuts.py  bic_scratch.py  biclustering_debug_runner.py  compatability_demonstration.py  cutting_accuracies.csv  dendrogram_cut_explorer.py  prebaked_2_tester.py  prebaked_tester.py  scratch.py  smallest.py  test_automated_cut.py  test_cpm.py  test_harness_1.py  test_seaborn.ipynb  validate_bic_opt.py  ward_decomp.py  ward_test.py
clustering/: biclustering.py  uniclustering.py  variance.py
data/: generatedata.py  matrix_logger.py  vector_supplement.py
data/io/: reader.py  writer.py
information/: criteria.py  dendrogram_cut.py
report/: p1a.py  p1a2.py  p1b.py  p1b2.py  p1c.py  p2.py  p2_2.py  p2_inv.py
test/: Timing.csv  Timing_ward_comparative.csv  Timing_ward_optimized.csv  examine_ward_against_reference.py  examine_ward_profiling_nb.ipynb  examne_ward_profiling.py  graph_timing_ward_comparative.py  profile_ward.py  profile_ward_against_reference.py  profile_ward_quicker.py  test_ward.py  ward_test.py
