[tool.poetry]
name = "ecseclusterpy"
version = "0.1.0"
description = ""
authors = ["FSharp4 <jakepeterson163@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
numpy = "^1.23.1"
matplotlib = "^3.5.2"
scipy = "^1.9.0"
pandas = "^1.4.3"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
